# auditd_ids

./: Cargo.toml
benches/: syscall_parse.rs
src/: analyzer.rs  main.rs  parser.rs
