[package]
name = "audisp_ids"
version = "0.1.0"
authors = ["0xd34b33f <0xd34b33f@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
signal-hook = "0.1.13"
procfs = "0.7.8"
syslog = "^4.0"
log = "0.4.8"
users = "0.10.0"
lazy_static = "1.4.0"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "syscall_parse"
harness = false